--- a/html/first.html
+++ b/html/first.html
@@ -3,11 +3,49 @@
         <title>NareshIT</title>
     </head>  
     <body>
+        <header>
+            <center>
+                <h1>Cities</h1>
+            </center>
+        </header>
+        <hr/>
         <center>
-            <h1>Heading</h1>
-        </center> 
+            <h1>London</h1>
+        </center>
         <p>
-            In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before the final copy is available
+            London publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before the final copy is available
         </p> 
+        <center>
+            <img src="london.jpeg" alt="london clock"/>
+        </center>
+        <p>
+            London publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before the final copy is available
+        </p> 
+        <p>
+            छपाई और अक्षर योजन उद्योग का एक साधारण डमी पाठ है. Lorem Ipsum सन १५०० के बाद से अभी तक इस उद्योग का मानक डमी पाठ मन गया, जब एक अज्ञात मुद्रक ने नमूना लेकर एक नमूना किताब बनाई. यह न केवल पाँच सदियों से जीवित रहा बल्कि इसने इलेक्ट्रॉनिक मीडिया में छलांग लगाने के
+        </p>
+        <hr/>
+        <center>
+            <h1>Amsterdam</h1>
+        </center>
+        <p>
+            Amsterdam publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before the final copy is available
+        </p> 
+        <center>
+            <img src="images/amsterdam.jpeg"/>
+        </center>
+        <p>
+            Amsterdam publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before the final copy is available
+        </p> 
+        <p>
+            छपाई और अक्षर योजन उद्योग का एक साधारण डमी पाठ है. Lorem Ipsum सन १५०० के बाद से अभी तक इस उद्योग का मानक डमी पाठ मन गया, जब एक अज्ञात मुद्रक ने नमूना लेकर एक नमूना किताब बनाई. यह न केवल पाँच सदियों से जीवित रहा बल्कि इसने इलेक्ट्रॉनिक मीडिया में छलांग लगाने के
+        </p>
+        <hr/>
+        <footer>
+            <center>
+                <h3> &copy; &hearts; Developer Funnel &hearts; &female; &male; </h3>
+            </center>
+        </footer>
+
     </body>
 </html>
