--- a/html/first.html
+++ b/html/first.html
@@ -1,12 +1,21 @@
 <html>
     <head>
         <title>NareshIT</title>
+        <link href="images/nareshit.jpeg" rel="icon"/>
     </head>  
     <body>
         <header>
             <center>
                 <h1>Cities</h1>
+                <a href="https://www.facebook.com/aakash.handa.14/" target="_blank">
+                    Facebook
+                </a>
+                <a href="https://www.instagram.com" target="_blank">
+                    InstaGram
+                </a>
+                <a href="about.html">About</a>
             </center>
+
         </header>
         <hr/>
         <center>
@@ -41,6 +50,7 @@
             छपाई और अक्षर योजन उद्योग का एक साधारण डमी पाठ है. Lorem Ipsum सन १५०० के बाद से अभी तक इस उद्योग का मानक डमी पाठ मन गया, जब एक अज्ञात मुद्रक ने नमूना लेकर एक नमूना किताब बनाई. यह न केवल पाँच सदियों से जीवित रहा बल्कि इसने इलेक्ट्रॉनिक मीडिया में छलांग लगाने के
         </p>
         <hr/>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3490.512174306434!2d77.02686241524717!3d28.97219028228498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390db16f74948529%3A0x6e88879cc2a180c5!2sRaj%20kunj!5e0!3m2!1sen!2sin!4v1650418279169!5m2!1sen!2sin" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <footer>
             <center>
                 <h3> &copy; &hearts; Developer Funnel &hearts; &female; &male; </h3>
