--- a/html/second.html
+++ b/html/second.html
@@ -16,6 +16,16 @@
         <center>
             <img src="london.jpeg"/>
         </center>
+        <ul type="circle">
+            <li>Apple</li>
+            <li>Mango</li>
+            <li>Orange</li>
+        </ul>
+        <ol type="I" start="10">
+            <li>Apple</li>
+            <li>Mango</li>
+            <li>Orange</li>
+        </ol>
         <p>
             London publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before the final copy is available
         </p> 
